fix(workflows): rebrand from block/goose to Ghenghis/Super-Goose
Major changes:
- Updated repository checks to use Ghenghis/Super-Goose
- Updated container image references (ghcr.io/ghenghis/super-goose)
- Disabled code signing temporarily (no AWS secrets configured)
- Fixed README links to point to Ghenghis organization
- Created professional workflow fix script

Breaking changes:
- Workflows now run on Ghenghis/Super-Goose fork
- Unsigned releases until code signing configured

This enables releases and CI/CD on the fork without dependencies on
Block infrastructure.

--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -14,7 +14,7 @@ name: Canary
 
 # Only run on the canonical repository, skip forks
 env:
-  IS_CANONICAL_REPO: ${{ github.repository == 'block/goose' }}
+  IS_CANONICAL_REPO: ${{ github.repository == 'Ghenghis/Super-Goose' }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -28,7 +28,7 @@ jobs:
     name: Prepare Version
     runs-on: ubuntu-latest
     # Only run on the canonical repo to prevent fork failures
-    if: github.repository == 'block/goose'
+    if: github.repository == 'Ghenghis/Super-Goose'
     outputs:
       version: ${{ steps.set-version.outputs.version }}
     steps:
