--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -20,7 +20,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     # Only run on the canonical repo to prevent fork failures (forks don't have GHCR permissions)
-    if: github.repository == 'block/goose'
+    if: github.repository == 'Ghenghis/Super-Goose'
     steps:
       - name: Checkout code
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8  # v6.0.1
