--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -2,8 +2,8 @@ name: Sync with upstream block/goose
 
 on:
   schedule:
-    # Run every day at 3 AM UTC
-    - cron: '0 3 * * *'
+    # Run weekly on Sunday at 3 AM UTC (reduced from daily to prevent spam)
+    - cron: '0 3 * * 0'
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -54,6 +54,19 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            // Check if issue already exists
+            const issues = await github.rest.issues.listForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'open',
+              labels: 'sync,merge-conflict'
+            });
+            
+            if (issues.data.length > 0) {
+              console.log('Sync conflict issue already exists, skipping creation');
+              return;
+            }
+            
             github.rest.issues.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
