--- a/ui/desktop/package.json
+++ b/ui/desktop/package.json
@@ -3,6 +3,14 @@
   "productName": "Goose",
   "version": "1.23.0",
   "description": "Goose App",
+  "homepage": "https://Ghenghis.github.io/Super-Goose",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Ghenghis/Super-Goose.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Ghenghis/Super-Goose/issues"
+  },
   "engines": {
     "node": "^24.10.0",
     "npm": "^11.6.1"
@@ -30,6 +38,7 @@
     "test-e2e:single": "npm run generate-api && playwright test -g",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix --no-warn-ignored",
     "lint:check": "npm run typecheck && eslint \"src/**/*.{ts,tsx}\" --max-warnings 0 --no-warn-ignored",
+    "lint:report": "eslint \"src/**/*.{ts,tsx}\" --format json --output-file eslint-report.json --no-warn-ignored || true",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,css,json}\"",
     "test": "vitest",
